Add instructions for using native code libraries with Java >=24